# terminal-configure

./: README.md  ipython-on-startup.py  lab.ipynb  myagnoster.zsh-theme  pyproject.toml  tmux.conf  vimrc  zshrc
scripts/: install-hermes-agent.sh  install-opencode.sh  install-pyenv.sh  install-skillhub.sh
